--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -4,7 +4,17 @@
 
 <h1>Our Products</h1>
 
-{% for product in products %}
-
+<div class="row">
+    {% for product in products %}
+    <div class="col-12 col-md-6 col-lg-4">
+        <h4>{{ product.name }}</h4>`    `
+        <p>{{ product.tea_type }}</p>
+        <img src="{{ product.image }}" alt="">
+        <p>Starting from: £{{ product.base_price_number }}</p>
+        <p>{{ product.sku }}</p>
+        <a href="{% url 'product_detail' sku=product.sku %}"></a>
+    </div>
+    {% endfor %}
+</div>
 
 {% endblock %}
