--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
       <nav>
         <ul>
           <li><h2>Ally P's Luxury Teas</h2></li>
-          <li><a href="">Shop</a></li>
+          <li><a href="{% url 'shop' %}">Shop</a></li>
           <li><a href="">The Brews Reviews!</a></li>
           <li><a href="">About Us</a></li>
           <li><a href="">Contact Us</a></li>
