--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -4,7 +4,7 @@
   <h1>We Deliver Worldwide!</h1>
 
   <ul>
-    <li><a href="">Shop</a></li>
+    <li><a href="{% url 'shop' %}">Shop</a></li>
     <li><a href="">The Brews Reviews!</a></li>
     <li><a href="">About Us</a></li>
     <li><a href="">Contact Us</a></li>
