--- a/shop/templates/shop/product_detail.html
+++ b/shop/templates/shop/product_detail.html
@@ -5,6 +5,17 @@
 
 <h1>{{ product.name }}</h1>
 
-<img src="{{ product.image.url }}" alt="{{ product.name }}">
+<img src="{{ product.picture.url }}" alt="{{ product.name }}" class="shop-img">
+
+<form class="form" action="" method="POST">
+    {% csrf_token %}
+    <label for="quantity">Choose Quantity:</label>
+    <select name="quantity" id="quantity">
+        <option value="30">30g: £{{ product.base_price_number|floatformat:2 }}</option>
+        <option value="100">100g: £{{ product.base_price_number|calculate_cost:3|floatformat:2 }}</option>
+        <option value="300">300g: £{{ product.base_price_number|calculate_cost:8|floatformat:2 }}</option>
+    </select>
+    <button type="submit" class="btn btn-primary">Add to Basket</button>
+</form>
 
 {% endblock %}
