--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,5 @@
+
+/* Class for welcome page overlay screen */
 .homepage-overlay {
     height: 100%;
     width: 100%;
@@ -6,4 +8,11 @@
     position: fixed;
     background: white;
     z-index: 100;
+}
+
+.shop-img {
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    width: 200px !important;
+    height: auto;
 }
