--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,9 @@
       src="https://kit.fontawesome.com/bc5efad812.js"
       crossorigin="anonymous"
     ></script>
+    <!-- Bootstrap 4 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <!-- My CSS -->
     <link rel="stylesheet" href="{% static 'css/base.css' %}" />
     <title>Ally P's Luxury Teas Leeds</title>
   </head>
