--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
     <header>
       <nav>
         <ul>
-          <li><h2>Ally P's Luxury Teas</h2></li>
+          <li><a href="{% url 'welcome' %}"><h2>Ally P's Luxury Teas</h2></a></li>
           <li><a href="{% url 'shop' %}">Shop</a></li>
           <li><a href="">The Brews Reviews!</a></li>
           <li><a href="">About Us</a></li>
@@ -30,7 +30,7 @@
           <li><a href="{% url 'account_signup' %}">Sign-in/Register</a></li>
           {% endif %}
           <li>
-            <a href=""><i class="fas fa-shopping-bag fa-lg"></i></a>
+            <a href="{% url 'view_bag' %}"><i class="fas fa-shopping-bag fa-lg"></i></a>
           </li>
         </ul>
       </nav>
