--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -16,6 +16,7 @@
     {% endfor %}
 </div>
 
+<!-- display each tea-->
 <div class="row">
     {% for product in products %}
     <div class="product col-12 col-md-6 col-lg-4">
