--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+<div class="container">
 <h1>Our Products</h1>
 
 <!-- Filter Options -->
@@ -29,5 +30,7 @@
     </div>
     {% endfor %}
 </div>
+</div>
+
 
 {% endblock %}
