--- a/templates/base.html
+++ b/templates/base.html
@@ -2,49 +2,80 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/bc5efad812.js"
-      crossorigin="anonymous"
-    ></script>
-    <!-- Bootstrap 4 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
-    <!-- My CSS -->
-    <link rel="stylesheet" href="{% static 'css/base.css' %}" />
-    <title>Ally P's Luxury Teas Leeds</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="{% url 'welcome' %}"><h2>Ally P's Luxury Teas</h2></a></li>
-          <li><a href="{% url 'shop' %}">Shop</a></li>
-          <li><a href="">The Brews Reviews!</a></li>
-          <li><a href="">About Us</a></li>
-          <li><a href="">Contact Us</a></li>
-          {% if request.user.is_authenticated %}
-          <li><a href="{% url 'profile' %}">Your account</a></li>
-          {% else %}
-          <li><a href="{% url 'account_signup' %}">Sign-in/Register</a></li>
-          {% endif %}
-          <li>
-            <a href="{% url 'view_bag' %}"><i class="fas fa-shopping-bag fa-lg"></i></a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script
+            src="https://kit.fontawesome.com/bc5efad812.js"
+            crossorigin="anonymous"
+        ></script>
+        <!-- Bootstrap 4 -->
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        />
+        <!-- My CSS -->
+        <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+        <!-- Extra custom CSS -->
+        {% block extra_css %} {% endblock %}
+        <title>Ally P's Luxury Teas Leeds</title>
+    </head>
+    <body>
+        <header>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="{% url 'welcome' %}"
+                            ><h2>Ally P's Luxury Teas</h2></a
+                        >
+                    </li>
+                    <li><a href="{% url 'shop' %}">Shop</a></li>
+                    <li><a href="">The Brews Reviews!</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Contact Us</a></li>
+                    {% if request.user.is_authenticated %}
+                    <li><a href="{% url 'profile' %}">Your account</a></li>
+                    {% else %}
+                    <li>
+                        <a href="{% url 'account_signup' %}"
+                            >Sign-in/Register</a
+                        >
+                    </li>
+                    {% endif %}
+                    <li>
+                        <a href="{% url 'view_bag' %}"
+                            ><i class="fas fa-shopping-bag fa-lg"></i
+                        ></a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
 
-    {% block content %} {% endblock %}
-    <!-- Scripts: -->
-    <!-- j-query -->
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.min.js"
-      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous"
-    ></script>
-    <!-- Stripe -->
-    <script src="https://js.stripe.com/v3/"></script>
-  </body>
+        {% if messages %}
+        <div class="message-container">
+            {% for message in messages %} {% with message.level as level %} {%
+            if level == 40 %} {% include 'includes/toasts/toast_error.html' %}
+            {% elif level == 30 %} {% include
+            'includes/toasts/toast_warning.html' %} {% elif level == 25 %} {%
+            include 'includes/toasts/toast_success.html' %} {% else %} {%
+            include 'includes/toasts/toast_info.html' %} {% endif %} {% endwith
+            %} {% endfor %}
+        </div>
+        {% endif %} {% block content %} {% endblock %}
+        <!-- Scripts: -->
+        <!-- j-query -->
+        <script
+            src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+            crossorigin="anonymous"
+        ></script>
+        <!-- Stripe -->
+        <script src="https://js.stripe.com/v3/"></script>
+        <!-- extra custom JS -->
+        {% block extra_js %}
+        <script type="text/javascript">
+            $(".toast").toast("show");
+        </script>
+        {% endblock %}
+    </body>
 </html>
