--- a/shop/templates/shop/product_detail.html
+++ b/shop/templates/shop/product_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% load shop_tools %} {% block content %}
 
-<div class="container">
+<div class="container-fluid">
     <h1>{{ product.name }}</h1>
 
     <img
