--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,9 +1,15 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block content %}
 
 <div class="container">
     <h1>Your Bag</h1>
+    <hr>
+
+    {% if bag_items %}
+    
+
+    {% endif %}
 </div>
 
-{% endblock %}
+{% endblock content %}
