--- a/templates/base.html
+++ b/templates/base.html
@@ -81,13 +81,21 @@
         {% block content %}
         {% endblock content %}
         <!-- Scripts: -->
-        <!-- j-query -->
+        <!-- J-Query -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
                 integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
                 crossorigin="anonymous"></script>
+        <!-- Bootstrap 4.6 JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Stripe -->
         <script src="https://js.stripe.com/v3/"></script>
-        <!-- extra custom JS -->
-        {% block extra_js %}<script type="text/javascript">$(".toast").toast("show");</script>{% endblock %}
+        <!-- Extra custom JS -->
+        {% block extra_js %}
+        <script type="text/javascript">
+            $(document).ready(function() {
+            $(".toast").toast("show");
+        });
+        </script>
+        {% endblock extra_js %}
     </body>
 </html>
