--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -7,7 +7,13 @@
     <hr>
 
     {% if bag_items %}
-    
+    <div class="row">
+        <div class="col-12 col-md-8">
+            {% for item in bag_items %}
+
+            
+        </div>
+    </div>
 
     {% endif %}
 </div>
