--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -2,19 +2,23 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container-fluid">
     <h1>Your Bag</h1>
     <hr>
 
     {% if bag_items %}
     <div class="row">
+        {% for item in bag_items %}
         <div class="col-12 col-md-8">
-            {% for item in bag_items %}
-
-            
+            <h4>{{ item.product.name }} at weight {{ item.weight }}, {{ item.quantity }}: {{ item.subtotal }}</h4>
+            <img src="{{ item.product.picure.url }}" alt="{{ item.product.name }}" width="200px" height="auto">
         </div>
+        {% endfor %}
     </div>
-
+    <a href="" class="btn btn-lg">Go to Checkout without sample</a>
+    {% else %}
+    <h2>There are no items in your bag!</h2>
+    <a href="{% url 'shop' }" class="btn btn-lg">View our Products</a>
     {% endif %}
 </div>
 
