--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -5,7 +5,7 @@
 <div class="container-fluid">
 <h1>Our Products</h1>
 
-<!-- Filter Options -->
+<!-- Filter Options, made with the basis of Code Institute's Boutique Ado plus Chat GPT -->
 <div>
     <a href="{% url 'shop' %}" class="btn {% if not selected_type %}btn-primary{% else %}btn-outline-primary{% endif %}">
         All
