--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -37,6 +37,7 @@
                         Total:
                         <span class="float-right">${{ total|floatformat:2 }}</span>
                     </p></strong>
+                    <p>Delivery and total calculated at checkout!</p>
                     <a href="{% url 'view_bag' %}" class="btn btn-black btn-block rounded-0">
                         <span class="text-uppercase">Go To Secure Checkout</span>
                         <span class="icon">
