--- a/templates/base.html
+++ b/templates/base.html
@@ -25,34 +25,33 @@
         <header>
             <nav class="navbar">
                 <div class="container-fluid">
-                    <ul>
-                        <li>
+                    <ul class="list-inline">
+                        <li class="list-inline-item">
                             <a href="{% url 'welcome' %}">
                                 <h2>Ally P's Luxury Teas</h2>
                             </a>
                         </li>
-                        <li>
+                        <li class="list-inline-item">
                             <a href="{% url 'shop' %}">Shop</a>
                         </li>
-                        <li>
+                        <li class="list-inline-item">
                             <a href="">The Brews Reviews!</a>
                         </li>
-                        <li>
+                        <li class="list-inline-item">
                             <a href="">About Us</a>
                         </li>
-                        <li>
+                        <li class="list-inline-item">
                             <a href="">Contact Us</a>
                         </li>
-                        {% if request.user.is_authenticated %}
-                            <li>
+
+                        <li class="list-inline-item">
+                            {% if request.user.is_authenticated %}
                                 <a href="{% url 'profile' %}">Your account</a>
-                            </li>
-                        {% else %}
-                            <li>
+                            {% else %}
                                 <a href="{% url 'account_signup' %}">Sign-in/Register</a>
-                            </li>
-                        {% endif %}
-                        <li>
+                            {% endif %}
+                        </li>
+                        <li class="list-inline-item">
                             <a href="{% url 'view_bag' %}"><i class="fas fa-shopping-bag fa-lg"></i></a>
                         </li>
                     </ul>
