--- a/shop/templates/shop/product_detail.html
+++ b/shop/templates/shop/product_detail.html
@@ -23,12 +23,10 @@
                 30g: £{{ product.base_price_number|floatformat:2 }}
             </option>
             <option value="100">
-                100g: £{{
-                product.base_price_number|calculate_cost:3|floatformat:2 }}
+                100g: £{{ product.base_price_number|calculate_cost:3|floatformat:2 }}
             </option>
             <option value="300">
-                300g: £{{
-                product.base_price_number|calculate_cost:8|floatformat:2 }}
+                300g: £{{ product.base_price_number|calculate_cost:8|floatformat:2 }}
             </option>
         </select>
         <button type="submit" class="btn btn-primary">Add to Basket</button>
