--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -1,4 +1,5 @@
-<div class="homepage-overlay">
+{% extends "base.html" %}
+<div class="homepage-overlay d-flex justify-content-center">
   <h2>Welcome...</h2>
   <h2>To Ally P's Luxury Teas Leeds!</h2>
   <h1>We Deliver Worldwide!</h1>
