--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -53,7 +53,7 @@
             </div>
             <div class="col-12 col-lg-6">
                 <p class="text-muted">Please fill out the delivery form:</p>
-                <form action="{% url 'payment' %}" method="post" id="delivery-form">
+                <form action="{% url 'checkout' %}" method="post" id="delivery-form">
                     {% csrf_token %}
                     <fieldset class="rounded px-3 mb-5">
                         <legend class="fieldset-label small text-black px-2 w-auto">Details</legend>
