--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="logo-font mb-4">Checkout</h2>
+                <h2 class="logo-font mb-4 text-center">Checkout</h2>
                 <hr>
             </div>
         </div>
@@ -47,7 +47,9 @@
                 <hr class="my-0">
                 <div class="row text-black text-right">
                     <div class="col-10 offset-2">
-                        <p class="my-0">Order Total: £{{ total|floatformat:2 }}</p>
+                        <p class="my-0" id="order-total">Total: £{{ total|floatformat:2 }}</p>
+                        <p class="my-0" id="display-delivery"></p>
+                        <p class="my-0" id="display-grand-total"></p>
                     </div>
                 </div>
             </div>
@@ -69,6 +71,9 @@
                         {{ order_form.state_or_region | as_crispy_field }}
                         {{ order_form.postcode | as_crispy_field }}
                         {{ order_form.country | as_crispy_field }}
+                        {{ order_form.delivery_cost }}
+                        {{ order_form.grand_total }}
+
                         <div class="form-check form-check-inline float-right mr-0">
                             {% if user.is_authenticated %}
                                 <label for="id-save-info" class="form-check-label">Save this delivery information to my profile</label>
@@ -85,6 +90,22 @@
                             {% endif %}
                         </div>
                     </fieldset>
+                    <fieldset>
+                        <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
+                        <!-- A stripe card element will go here -->
+                        <div class="mb-3" id="card-element"></div>
+                        <!-- Used to display form errors -->
+                        <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+                        <!-- Pass the client secret to the view so we can get the payment intent id -->
+                        <input type="hidden" value="{{ client_secret }}" name="client_secret">
+                        <label for="id-email-subscription" class="form-check-label">
+                            Would you like to subscribe to our email in order to find out about our latest offers and other news?
+                        </label>
+                        <input type="checkbox"
+                               id="id-email-subscription"
+                               name="subscribe_to_email"
+                               class="form-check-input ml-2 mr-0">
+                    </fieldset>
                     <div class="submit-button text-right mt-5 mb-2">
                         <a href="{% url 'view_bag' %}" class="btn btn-outline-black rounded-0">
                             <span class="icon">
@@ -93,21 +114,28 @@
                             <span class="font-weight-bold">Adjust bag</span>
                         </a>
                         <button type="submit" class="btn btn-black rounded-0" id="submit-button">
-                            <span class="font-weight-bold">Go to Payment</span>
-                            <span class="icon">
-                                <i class="fas fa-lock"></i>
-                            </span>
+                            <span class="font-weight-bold">Pay</span>
                         </button>
-                        <p class="small text-danger my-0">
-                            <span class="icon">
-                                <i class="fas fa-exclamation-circle"></i>
-                            </span>
-                            <span>Your delivery and grand total will be calculated at the payment section.</span>
-                        </p>
                     </div>
                 </form>
             </div>
         </div>
     </div>
 
+    <div id="loading-overlay">
+        <h3 class="text-light logo-font loading-spinner">
+            <span class="icon">
+                <i class="fas fa-3x fa-sync-alt fa-spin"></i>
+            </span>
+        </h3>
+    </div>
+
 {% endblock content %}
+
+{% block extra_js %}
+    {{ block.super }}
+    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+    {{ client_secret|json_script:"id_client_secret" }}
+    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
+    <script src="{% static 'checkout/js/checkout.js' %}"></script>
+{% endblock extra_js %}
