--- a/templates/base.html
+++ b/templates/base.html
@@ -81,11 +81,9 @@
         {% endblock content %}
         <!-- Scripts: -->
         <!-- J-Query -->
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-                integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-                crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <!-- Bootstrap 4.6 JS -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Stripe -->
         <script src="https://js.stripe.com/v3/"></script>
         <!-- Extra custom JS -->
