--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -59,13 +59,10 @@
                     {% for item in order.lineitems.all %}
                         <div class="row">
                             <div class="col-12 col-md-4">
-                                <p class="small mb-0 text-black font-weight-bold">
-                                    {{ item.product.name }}
-                                    {% if item.product_size %}- Size {{ item.product_size|upper }}{% endif %}
-                                </p>
+                                <p class="small mb-0 text-black font-weight-bold">{{ item.product.name }}</p>
                             </div>
                             <div class="col-12 col-md-8 text-md-right">
-                                <p class="small mb-0">{{ item.quantity }} @ ${{ item.product.price }} each</p>
+                                <p class="small mb-0">{{ item.weight }}g, x{{ item.quantity }}: {{ item.item_total }}</p>
                             </div>
                         </div>
                     {% endfor %}
@@ -78,40 +75,48 @@
 
                     <div class="row">
                         <div class="col-12 col-md-4">
-                            <p class="mb-0 text-black font-weight-bold">Full Name</p>
+                            <p class="mb-0 text-black font-weight-bold">Full Name:</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
                             <p class="mb-0">{{ order.full_name }}</p>
                         </div>
                     </div>
 
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 text-black font-weight-bold">Address 1</p>
-                        </div>
-                        <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0">{{ order.street_address1 }}</p>
-                        </div>
-                    </div>
-
-                    {% if order.street_address2 %}
+                    {% if order.address_line2 %}
                         <div class="row">
                             <div class="col-12 col-md-4">
-                                <p class="mb-0 text-black font-weight-bold">Address 2</p>
+                                <p class="mb-0 text-black font-weight-bold">Address Line 1:</p>
+                            </div>
+                            <div class="col-12 col-md-8 text-md-right">
+                                <p class="mb-0">{{ order.address_line1 }}</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-md-4">
+                                <p class="mb-0 text-black font-weight-bold">Address Line 2:</p>
                             </div>
                             <div class="col-12 col-md-8 text-md-right">
                                 <p class="mb-0">{{ order.street_address1 }}</p>
                             </div>
                         </div>
+                    {% else %}
+                        <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold">Address:</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0">{{ order.address_line1 }}</p>
+                        </div>
+                    </div>
                     {% endif %}
 
-                    {% if order.county %}
+                    {% if order.state_or_region %}
                         <div class="row">
                             <div class="col-12 col-md-4">
-                                <p class="mb-0 text-black font-weight-bold">County</p>
+                                <p class="mb-0 text-black font-weight-bold">State or Region</p>
                             </div>
                             <div class="col-12 col-md-8 text-md-right">
-                                <p class="mb-0">{{ order.county }}</p>
+                                <p class="mb-0">{{ order.state_or_region }}</p>
                             </div>
                         </div>
                     {% endif %}
@@ -145,14 +150,16 @@
                         </div>
                     </div>
 
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 text-black font-weight-bold">Phone Number</p>
+                    {% if order.phone_number %}
+                        <div class="row">
+                            <div class="col-12 col-md-4">
+                                <p class="mb-0 text-black font-weight-bold">Phone Number:</p>
+                            </div>
+                            <div class="col-12 col-md-8 text-md-right">
+                                <p class="mb-0">{{ order.phone_number }}</p>
+                            </div>
                         </div>
-                        <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0">{{ order.phone_number }}</p>
-                        </div>
-                    </div>
+                    {% endif %}
 
                     <div class="row">
                         <div class="col">
