--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -35,7 +35,7 @@
                 <div class="col">
                     <strong><p class="mt-3 mb-1 text-black">
                         Total:
-                        <span class="float-right">${{ total|floatformat:2 }}</span>
+                        <span class="float-right">£{{ total|floatformat:2 }}</span>
                     </p></strong>
                     <p>Delivery and total calculated at checkout!</p>
                     <a href="{% url 'view_bag' %}" class="btn btn-black btn-block rounded-0">
