Change order model back, add loading overlay js, add checkout button to product detail html

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -211,7 +211,7 @@
                         <span class="icon mr-2">
                             <i class="fas fa-gifts"></i>
                         </span>
-                        <span class="text-uppercase">Keep Shopping</span>
+                        <span class="text-uppercase">Back to the Shop</span>
                     </a>
                 {% endif %}
             </div>
