--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -126,7 +126,7 @@
             </div>
         </div>
     </div>
-
+    <!-- loading overlay borrowed from code institute -->
     <div id="loading-overlay">
         <h3 class="text-light logo-font loading-spinner">
             <span class="icon">
