--- a/shop/templates/shop/product_detail.html
+++ b/shop/templates/shop/product_detail.html
@@ -1,38 +1,55 @@
-{% extends "base.html" %} {% load shop_tools %} {% block content %}
+{% extends "base.html" %}
+{% load shop_tools %}
 
-<div class="container-fluid">
-    <h1>{{ product.name }}</h1>
+{% block content %}
 
-    <img
-        src="{{ product.picture.url }}"
-        alt="{{ product.name }}"
-        class="shop-img"
-        width="400"
-        height="auto"
-    />
+    <div class="container">
+        <h1>{{ product.name }}</h1>
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <img src="{{ product.picture.url }}"
+                     alt="{{ product.name }}"
+                     class="shop-img"
+                     width="400"
+                     height="auto" />
 
-    <form
-        class="form"
-        action="{% url 'add_to_bag' product_id=product.id %}"
-        method="post"
-    >
-        {% csrf_token %}
-        <label for="weight">Choose Quantity:</label>
-        <select name="weight" id="weight">
-            <option value="30">
-                30g: £{{ product.base_price_number|floatformat:2 }}
-            </option>
-            <option value="100">
-                100g: £{{ product.base_price_number|calculate_cost:3|floatformat:2 }}
-            </option>
-            <option value="300">
-                300g: £{{ product.base_price_number|calculate_cost:8|floatformat:2 }}
-            </option>
-        </select>
-        <button type="submit" class="btn btn-primary">Add to Basket</button>
-        <input type="hidden" name="redirect_url" value="{{ request.path }}" />
-    </form>
-    <a href="{% url 'shop' %}" class="btn">Back to Shop</a>
-</div>
+                <form class="form"
+                      action="{% url 'add_to_bag' product_id=product.id %}"
+                      method="post">
+                    {% csrf_token %}
+                    <label for="weight">Choose Quantity:</label>
+                    <select name="weight" id="weight">
+                        <option value="30">30g: £{{ product.base_price_number|floatformat:2 }}</option>
+                        <option value="100">100g: £{{ product.base_price_number|calculate_cost:3|floatformat:2 }}</option>
+                        <option value="300">300g: £{{ product.base_price_number|calculate_cost:8|floatformat:2 }}</option>
+                    </select>
+                    <button type="submit" class="btn">Add to Basket</button>
+                    <input type="hidden" name="redirect_url" value="{{ request.path }}" />
+                </form>
+            </div>
+            <div class="col-12 col-md-6 text-right">
+                <div class="row">
+                    <div class="col-12">
+                        <a href="{% url 'shop' %}" class="btn">
+                            <span>Back to Shop</span>
+                            <span>
+                                <i class="fas fa-shopping-bag"></i>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-12">
+                        {% if 'bag_items' %}
+                            <a href="{% url 'view_bag' %}" class="btn">
+                                <span class="text-uppercase">Go To Secure Checkout</span>
+                                <span class="icon">
+                                    <i class="fas fa-lock"></i>
+                                </span>
+                            </a>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock content %}
