--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -1,27 +1,19 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block content %}
-<h1>
-  Your Account
-</h1>
+    <h1>Your Account</h1>
 
-<div class="row">
-  <div class="col-12 col-md-6">
-    <h3>Your Subscriptions</h3>
-  </div>
-</div>
+    <div class="container">
+        <div class="row mt-3">
+            <div class="col-12 col-md-6 text-left">
+                <h3 class="text-md-center">Order History: </h3>
+				{% for order in orders %}
+				<div>
+					<a href="#">{{ order.order_number }}</a>
+				</div>
+				{% endfor %}
+            </div>
+        </div>
+    </div>
 
-<div class="row">
-  <div class="col-12 col-md-6">
-    <h3>Order History</h3>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-12 col-md-6">
-    <h3>Your Product Reviews</h3>
-  </div>
-</div>
-
-
-{% endblock %}
+{% endblock content %}
