--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -6,13 +6,17 @@
     <div class="container">
         <div class="row mt-3">
             <div class="col-12 col-md-6 text-left">
-                <h3 class="text-md-center">Order History: </h3>
+                <h3 class="text-md-center">Order History:</h3>
 				{% for order in orders %}
 				<div>
 					<a href="#">{{ order.order_number }}</a>
 				</div>
 				{% endfor %}
             </div>
+			<div class="col-12 col-md-6 text-left">
+				<h3 class="text-md-center">Your Information:</h3>
+				<a href="" class="btn"></a>
+			</div>
         </div>
     </div>
 
