--- a/profiles/templates/profiles/edit_form.html
+++ b/profiles/templates/profiles/edit_form.html
@@ -1,12 +1,30 @@
 {% extends "base.html" %}
+{% load static %}
 
-<h1>Edit Your Profile Data</h1>
+{% block content %}
+    <h1>Account Management</h1>
 
-<form class="mt-3"
-      action="{% url 'edit_profile' %}"
-      method="post"
-      id="profile-update-form">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
-</form>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-10 col-lg-8 mx-auto">
+                <form class="mt-3"
+                      action="{% url 'edit_profile' userkey=user_profile.user.pk %}"
+                      method="post"
+                      id="profile-update-form">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <div class="form-check">
+                        <input type="checkbox"
+                               class="form-check-input"
+                               id="id_subscribed_to_email"
+                               name="subscribed_to_email"
+                               {% if user_profile.subscribed_to_email %}checked{% endif %}>
+                        <label class="form-check-label" for="id_subscribed_to_email">Subscribe to emails</label>
+                    </div>
+                    <button class="btn btn-black rounded-0 float-left">Update Information</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+{% endblock content %}
