--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
     <h1>Your Account</h1>
@@ -7,16 +8,29 @@
         <div class="row mt-3">
             <div class="col-12 col-md-6 text-left">
                 <h3 class="text-md-center">Order History:</h3>
-				{% for order in orders %}
-				<div>
-					<a href="#">{{ order.order_number }}</a>
-				</div>
-				{% endfor %}
+                {% for order in orders %}
+                    <div>
+                        <a href="{% url 'view_order' order_number=order.order_number %}">{{ order.order_number }}</a>
+                    </div>
+                {% endfor %}
             </div>
-			<div class="col-12 col-md-6 text-left">
-				<h3 class="text-md-center">Your Information:</h3>
-				<a href="" class="btn"></a>
-			</div>
+            <div class="col-12 col-md-6 text-right">
+                <h3 class="text-md-center">Your Information:</h3>
+                <div id="info-div">
+                    {% if user.user_profile.full_name %}<p class="display-info">{{ user.user_profile.full_name }}</p>{% endif %}
+                    {% if user.user_profile.email %}<p class="display-info">{{ user.user_profile.email }}</p>{% endif %}
+                    {% if user.user_profile.subscribed_to_email %}<p class="display-info">You are currently subscribed to our email marketing service.</p>{% endif %}
+                    {% if user.user_profile.phone_number %}<p class="display-info">{{ user.user_profile.phone_number }}</p>{% endif %}
+                    {% if user.user_profile.address_line1 %}<p class="display-info">{{ user.user_profile.address_line1 }}</p>{% endif %}
+                    {% if user.user_profile.address_line2 %}<p class="display-info">{{ user.user_profile.address_line2 }}</p>{% endif %}
+                    {% if user.user_profile.town_or_city %}<p class="display-info">{{ user.user_profile.town_or_city }}</p>{% endif %}
+                    {% if user.user_profile.state_or_region %}<p class="display-info">{{ user.user_profile.state_or_region }}</p>{% endif %}
+                    {% if user.user_profile.postal_code %}<p class="display-info">{{ user.user_profile.postal_code }}</p>{% endif %}
+                    {% if user.user_profile.country %}<p class="display-info">{{ user.user_profile.country }}</p>{% endif %}
+                </div>
+
+                <a href="{% url 'edit_profile' userkey=profile.user.pk %}" class="btn">Manage your account here</a>
+            </div>
         </div>
     </div>
 
