--- a/profiles/templates/profiles/edit_form.html
+++ b/profiles/templates/profiles/edit_form.html
@@ -2,11 +2,11 @@
 {% load static %}
 
 {% block content %}
-    <h1>Account Management</h1>
+    <h1>Edit Your Profile Information</h1>
 
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-10 col-lg-8 mx-auto">
+            <div class="col-12 col-md-8 col-lg-6 offset-1">
                 <form class="mt-3"
                       action="{% url 'edit_profile' userkey=user_profile.user.pk %}"
                       method="post"
@@ -24,6 +24,9 @@
                     <button class="btn btn-black rounded-0 float-left">Update Information</button>
                 </form>
             </div>
+			<div class="col-12 col-md-2 col-lg-4">
+				<a href="">Account Management</a>
+			</div>
         </div>
     </div>
 
