Add: Delete account functionality

--- a/profiles/templates/profiles/edit_form.html
+++ b/profiles/templates/profiles/edit_form.html
@@ -25,7 +25,7 @@
                 </form>
             </div>
 			<div class="col-12 col-md-2 col-lg-4">
-				<a href="">Account Management</a>
+				<a href="{% url 'account_deletion' userkey=user_profile.user.pk %}">Account Management</a>
 			</div>
         </div>
     </div>
