--- a/profiles/templates/profiles/view_order.html
+++ b/profiles/templates/profiles/view_order.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block content %}
 <div class="container">
     <h1>User order: {{ order.order_number }}</h1>
     <div class="row">
@@ -39,7 +40,10 @@
                 <p>{{ item.weight }}</p>
                 <p>{{ item.quantity }}</p>
                 <p>{{ item.item_total }}</p>
+                <img src="{{ item.product.picture.url }}" alt="{{ item.product.name }}" width="100px" height="auto">
             {% endfor %}
         </div>
+        <a href="{% url 'profile' %}">Go Back</a>
     </div>
 </div>
+{% endblock content %}
