--- a/shop/templates/shop/product_detail.html
+++ b/shop/templates/shop/product_detail.html
@@ -38,7 +38,7 @@
                         </a>
                     </div>
                     <div class="col-12">
-                        {% if 'bag_items' %}
+                        {% if bag_items %}
                             <a href="{% url 'view_bag' %}" class="btn">
                                 <span class="text-uppercase">Go To Secure Checkout</span>
                                 <span class="icon">
